[package]
name = "robot_visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Iustin Neaga"]
publish = ["kellnr"]

[dependencies]
winit = "0.30.0"
bevy_pancam = "0.10.0"
bevy = { version = "0.12.1"}
bevy-inspector-egui = "0.22.1"

robotics_lib = {version= "0.1.21", registry = "kellnr" }
worldgen_unwrap = { version="0.1.5", registry = "kellnr"}
ghost_journey_journal = {version= "0.1.1", registry = "kellnr" }
oxagaudiotool = {version= "0.2.0", registry = "kellnr" }
rstykrab_cache = {version= "0.1.1", registry = "kellnr" }
ohcrab_weather = {version= "0.1.2", registry = "kellnr" }
rustici_planner = {version= "0.1.6", registry = "kellnr" }
sense_and_find_by_rustafariani = {version= "0.1.7", registry = "kellnr" }
bob_lib = {version= "0.1.4", registry = "kellnr" }
rand = "0.8.5"
