[package]
name = "robot_visualizer"
version = "0.3.2"
edition = "2021"
authors = ["Iustin Neaga"]
publish = ["kellnr"]

[dependencies]
winit = "0.30.0"
bevy_pancam = "0.10.0"
bevy = { version = "0.12.1"}
bevy-inspector-egui = "0.22.1"

robotics_lib = {version= "0.1.21", registry = "kellnr" }
worldgen_unwrap = { version="0.1.5", registry = "kellnr"}
rstykrab_cache = {version= "0.1.1", registry = "kellnr" }
oxagaudiotool = {version= "0.2.0", registry = "kellnr" }
rand = "0.8.5"
